# zellij-tabmap

./: .gitignore  Cargo.toml  README.md  cliff.toml  codecov.yml  install.sh  rustfmt.toml
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/rules/: color-design.md  zellij-plugin-development.md
.claude/skills/: color-design-advisor.md
.claude/skills/color-design-advisor/: SKILL.md
.claude/skills/try-dev/: SKILL.md  try-dev.sh
.gemini/: settings.json
.gemini/skills/tabmap-color-advisor/: SKILL.md
.gemini/skills/tabmap-color-advisor/scripts/: smoke-test.sh
.github/workflows/: ci.yml  release.yml
docs/: design.md
docs/superpowers/plans/: 2026-07-12-float-label-occlusion.md  2026-07-12-floating-panes-in-minimap.md  2026-07-16-float-labels.md  2026-07-16-overflow-chip-reveal.md  2026-07-16-suppressed-pane-marker.md  2026-07-17-pinned-floats.md
docs/superpowers/specs/: 2026-07-12-float-label-occlusion-design.md  2026-07-12-floating-panes-in-minimap-design.md  2026-07-16-float-labels-design.md  2026-07-16-overflow-chip-reveal-design.md  2026-07-16-suppressed-pane-marker-design.md  2026-07-17-pinned-floats-design.md
examples/: render_active_cue.rs  render_close_button.rs  render_demo.rs  render_floating.rs  render_gradient.rs  render_new_tab_button.rs  render_palette.rs  render_perspective.rs  render_pinned.rs  render_top_label.rs
src/: color.rs  config.rs  floating.rs  lib.rs  line.rs  main.rs  minimap.rs  paint.rs  pinned.rs  projection.rs  router.rs  scroll.rs  suppressed.rs  tab_block.rs  theme.rs  title.rs
